Use SequencedCollection.removeLast instead of List.remove(int)
This is obviously nicer.

Commit automatically generated with Refaster.