@@ -165,8 +165,7 @@ class ARGToYAMLWitness extends AbstractYAMLWitnessExporter {
           Verify.verify(!functionEntryNodes.isEmpty());
           collectedStates.functionContractEnsures.put(
               functionExitNode,
-              new FunctionEntryExitPair(
-                  functionEntryNodes.remove(functionEntryNodes.size() - 1), pSuccessor));
+              new FunctionEntryExitPair(functionEntryNodes.removeLast(), pSuccessor));
         }
 
         if (pSuccessor.getChildren().size() > 1 && !callStackRecovery.containsKey(pSuccessor)) {
